<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipefinder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.recipefinder.ui.dashboard.FavouriteFragment"
        android:label="@string/title_Favourite"
        tools:layout="@layout/favourite_dashboard" >
        <action
            android:id="@+id/action_navigation_favourite_to_detailFragment2"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/navigation_favourite"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.recipefinder.ui.Setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_setting_to_navigation_battery"
            app:destination="@id/navigation_battery"
            app:popUpTo="@id/navigation_setting"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.recipefinder.ui.home.detailsofincredient.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/navigation_Shoppinglist"
        android:name="com.example.recipefinder.ui.Shoppinglist.ShoppingListFragment"
        android:label="fragment_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/navigation_mealplanner"
        android:name="com.example.recipefinder.ui.MealPlanner.MealPlanner"
        android:label="fragment_meal_planner"
        tools:layout="@layout/fragment_meal_planner" />
    <fragment
        android:id="@+id/navigation_battery"
        android:name="com.example.recipefinder.ui.Battery.BatteryFragment"
        android:label="fragment_battery"
        tools:layout="@layout/fragment_battery" />


</navigation>